# unblock-agent

./: .gitignore  Procfile  fly.toml  pyproject.toml
app/: agent.py  auth.py  constants.py  crud.py  database.py  filter_prompt.py  main.py  openapi.py  predict_functions.py  schemas.py
app/chat/: __init__.py  chat.py  chat_counter.py  chat_list.py
app/functions/: __init__.py  get_invocation.py  get_openai_functions.py
app/functions/covalent/: __init__.py  getTokenBalances.py  getTokenTransfers.py  getTransactions.py
app/functions/general/: __init__.py  getDomainInfo.py  getOwner.py  signerAddress.py  toEth.py  toWei.py
app/functions/safe/: __init__.py  addOwner.py  changeThreshold.py  createTransaction.py  deploySafe.py  disableModule.py  enableModule.py  executeTransaction.py  getPendingTransactions.py  getSafeInfo.py  getTransactionConfirmations.py  removeOwner.py  safesByOwner.py  signTransaction.py
app/functions/system/: __init__.py  askQuestion.py  supportedFunctions.py  taskCompleted.py
app/static/: index.html
examples/: http_client.py  safe_http_client.py  websocket_client.py
scripts/: populatedb.py
scripts/functions/addressBook/: getAddress.json  setAddress.json
scripts/functions/coingecko/: simplePrice.json  simpleTokenPrice.json
scripts/functions/covalent/: getTokenBalances.json  getTokenTransfers.json  getTransactions.json
scripts/functions/ens/: getOwner.json  registerDomain.json
scripts/functions/erc20/: allowance.json  approve.json  balanceOf.json  tokenMeta.json  totalSupply.json  (+2 more)
tests/: test.py  test_http.py  test_websocket.py
(+56 files in other folders)
